--- a/Final Submission.ipynb
+++ b/Final Submission.ipynb
@@ -397,11 +397,11 @@
     "\n",
     "#### Clustered data for one iteration\n",
     "\n",
-    "<img src=\"Documents/clustered_data.png\">\n",
+    "<img src=\"/clustered_data.png\">\n",
     "\n",
     "#### Centroid for one iteration\n",
     "\n",
-    "<img src=\"Documents/centroid.png\">"
+    "<img src=\"/centroid.png\">"
    ]
   },
   {
