--- a/Final Submission.ipynb
+++ b/Final Submission.ipynb
@@ -46,7 +46,7 @@
     "'''\n",
     "DESCRIPTION:\n",
     "Loading data from the csv to dataframe. Only 3 columns are kept \n",
-    "for initial conderstanding: entry_date, rounded_time,price\n",
+    "for initial consideration: entry_date, rounded_time,price\n",
     "\n",
     "@Input: \n",
     "    filepath: file containing electricity usage\n",
