--- a/Final Submission.ipynb
+++ b/Final Submission.ipynb
@@ -92,7 +92,7 @@
     "    try:\n",
     "        return data.apply(lambda s: s / data.max(axis=1)).fillna(0)\n",
     "    \n",
-    "    except Exception:\n",
+    "    except Exception as e:\n",
     "        logf.write(\"Failed to normalized the data {0}\\n\".str(e))\n",
     "        LOG.error(traceback.format_exc())\n",
     "        sys.exit(1)    "
@@ -129,7 +129,7 @@
     "        data_norm = (normalize_df(pivoted.loc[:, pivoted.columns.difference([\"rounded_time\"])]).round(3))\n",
     "        return pivoted, data_norm\n",
     "    \n",
-    "    except Exception:\n",
+    "    except Exception as e:\n",
     "        logf.write(\"Failed in pre-processing the data {0}\\n\".str(e))\n",
     "        LOG.error(traceback.format_exc())\n",
     "        sys.exit(1)    "
@@ -160,7 +160,7 @@
     "        plt.legend(title=\"Cluster centroids:\", loc=\"upper left\")\n",
     "        plt.grid()\n",
     "    \n",
-    "    except Exception as E:\n",
+    "    except Exception as e:\n",
     "        logf.write(\"Failed in plotting cluster centroid of the the data {0}\\n\".str(e))\n",
     "        LOG.error(traceback.format_exc())\n",
     "        sys.exit(1)            "
