--- a/Final Submission.ipynb
+++ b/Final Submission.ipynb
@@ -175,7 +175,7 @@
     "'''\n",
     "DESCRIPTION:\n",
     "Plot one subplot per cluster along with cluster centroid\n",
-    "in decreasing order of cluster size percentage\n",
+    "in decreasing order of cluster size\n",
     "\n",
     "'''\n",
     "def plot_clustered_profiles(df, clust, n_cols=3, alpha=0.2):\n",
