--- a/Final Submission.ipynb
+++ b/Final Submission.ipynb
@@ -260,7 +260,7 @@
     "    ..... }\n",
     "    \n",
     "   <br>     \n",
-    "    * After atleast one shift is completed, to calculate the stability/movement **euclidean distance** is calculated between cluster centroid of adjacent iteration belonging to same rank in size or same key of \"mapping\" dictionary. These values are stored in another dictionary where key again represent rank of cluster in size (0 means largest size). This distance combines complete movement between 2 same cluster when shifted by $n$ number of weeks from starting date.\n",
+    "    * After atleast one shift is completed, to calculate the stability/movement **euclidean distance** is calculated between cluster centroid of adjacent iteration belonging to same rank in size or same key of \"mapping\" dictionary. These distance values are stored in another dictionary where key again represent rank of cluster in size (0 means largest size). This distance combines complete movement between 2 same cluster when shifted by $n$ number of weeks from starting date.\n",
     "\n",
     "\n",
     "4. Now we have distance for all 6 clusters based on size. To map these distance with cluster number, for very cluster I considered its rank as per first iteration and mapped it to distance values stored in the \"movement\" dictionary.\n",
