--- a/Final Submission.ipynb
+++ b/Final Submission.ipynb
@@ -263,7 +263,7 @@
     "    * After atleast one shift is completed, to calculate the stability/movement **euclidean distance** is calculated between cluster centroid of adjacent iteration belonging to same rank in size or same key of \"mapping\" dictionary. These distance values are stored in another dictionary where key again represent rank of cluster in size (0 means largest size). This distance combines complete movement between 2 same cluster when shifted by $n$ number of weeks from starting date.\n",
     "\n",
     "\n",
-    "4. Now we have distance for all 6 clusters based on size. To map these distance with cluster number, for very cluster I considered its rank as per first iteration and mapped it to distance values stored in the \"movement\" dictionary.\n",
+    "4. Now we have distance for all 6 clusters based on size rank. To map these distance with cluster number, for every cluster I took the rank of first iteration and mapped it to distance values stored in the \"movement\" dictionary.\n",
     "\n",
     "\n",
     "5. Output dictionary holds the movement for a very cluster from $iteration1$ to $iteration26$. More the value for a cluster, more is the change in the cluster structure after 26 iterations\n"
@@ -397,11 +397,11 @@
     "\n",
     "#### Clustered data for one iteration\n",
     "\n",
-    "<img src=\"Documents/clustered_data.png\">\n",
+    "<img src=\"/clustered_data.png\">\n",
     "\n",
     "#### Centroid for one iteration\n",
     "\n",
-    "<img src=\"Documents/centroid.png\">"
+    "<img src=\"/centroid.png\">"
    ]
   },
   {
